# virtue

./: Cargo.toml  LICENSE.md  README.md  justfile
.github/workflows/: rust.yml
src/: error.rs  lib.rs  utils.rs
src/generate/: gen_const.rs  gen_enum.rs  gen_struct.rs  generate_fn.rs  generate_item.rs  generate_mod.rs  generator.rs  impl.rs  impl_for.rs  mod.rs  stream_builder.rs
src/parse/: attributes.rs  body.rs  data_type.rs  function.rs  generics.rs  mod.rs  utils.rs  visibility.rs
test/: Cargo.toml
test/derive/: Cargo.toml
test/derive/src/: lib.rs
test/src/: main.rs
