[package]
name = "virtue"
version = "0.0.11"
edition = "2018"
description = "A sinless derive macro helper"
license = "MIT"
documentation = "https://docs.rs/virtue"
repository = "https://github.com/bincode-org/virtue"
readme = "README.md"

[dev-dependencies]
proc-macro2 = "1.0"

[workspace]
members = ["test", "test/derive"]
